@@ -1,5 +1,14 @@
 ## THIS FILE IS JUST A HELP FOR DEVELOPERS IT SHOULDNT BE USED IN A 1.5 DISTRIBUTION
 
+## Wiki footnotes
+drop table if exists tiki_page_footnotes;
+create table tiki_page_footnotes(
+  user varchar(200) not null,
+  pageName varchar(250) not null,
+  data text,
+  primary key(user,pageName)
+);
+
 ### User-tasks
 drop table if exists tiki_user_tasks;
 create table tiki_user_tasks(
