@@ -240,6 +240,18 @@ if($feature_wiki_attachments == 'y') {
   $smarty->assign('atts',$atts["data"]);
 }
 
+
+$smarty->assign('footnote','');
+$smarty->assign('has_footnote','n');
+if($feature_wiki_footnotes == 'y') {
+  if($user) {
+    $x = $tikilib->get_footnote($user,$page);
+    $footnote=$tikilib->get_footnote($user,$page);
+    $smarty->assign('footnote',$tikilib->parse_data($footnote));
+    if($footnote) $smarty->assign('has_footnote','y');
+  }
+}
+
 $smarty->assign('wiki_extras','y');
 $smarty->assign('structure','n');   
 if($structlib->page_is_in_structure($page)) {   
